--- a/home.html
+++ b/home.html
@@ -57,10 +57,6 @@
                                 </div>
                                 <div class="btn_accion">
                                     <div class="btn-accion1">
-                                        <button class="btn-play">
-                                            <span class="material-icons md-30 pause"> pause
-                                            </span>
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -103,10 +99,6 @@
                                 </div>
                                 <div class="btn_accion">
                                     <div class="btn-accion1">
-                                        <button class="btn-play">
-                                            <span class="material-icons md-30 pause"> pause
-                                            </span>
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -128,10 +120,6 @@
                                 </div>
                                 <div class="btn_accion">
                                     <div class="btn-accion1">
-                                        <button class="btn-play">
-                                            <span class="material-icons md-30 pause"> pause
-                                            </span>
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -153,10 +141,6 @@
                                 </div>
                                 <div class="btn_accion">
                                     <div class="btn-accion1">
-                                        <button class="btn-play">
-                                            <span class="material-icons md-30 pause"> pause
-                                            </span>
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -294,23 +278,247 @@
                     </div>
                 </div>
             </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
+            <section class="enfoque">
+                <div>
+                    <div class="titulo-enfoque">
+                        <div class="tit-derecha">
+                            <h2 class="subtitulo2">Playlists de Spotify</h2>
+                        </div>
+                        <a class="tit-izquierda" chref="">
+                            <span class="mostrar">Mostrar todos</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="contenido-enfoque">
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/playlist/l1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Pop Up
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Super mega hits! Foto: Taylor Swift.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/playlist/l2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Rock Classics
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Rock legends & epic songs that continue to inspire..
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/playlist/l3.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Karaoke Mexicano
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    ¡Con las Letras de estas canciones, no querrás...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/playlist/l4.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Tarea Casual
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    ¡Deja que la música te inspire para acabar con tu tarea!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/playlist/l5.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Radio Corazón
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    El amor no se escucha, se siente...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/playlist/l6.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        All Out 2010s
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    The biggest songs of the 2010s.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 
+
+
+    <div class="contenedor-footer">
+        <nav class="contenido-footer">
+            <div class="footer-norte">
+                <div class="footer-info">
+                    <div class="info-1">
+                        <ul class="lista-empresa">
+                            <p class="empresa">Empresa</p>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Acerca de</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Empleo</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">For the Record</span>
+                            </a>
+                        </ul>
+                    </div>
+                    <div class="info-1">
+                        <ul class="lista-empresa">
+                            <p class="empresa">Comunidades</p>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Para artistas</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Desarolladores</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Publicidad</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Inversores</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Proveedores</span>
+                            </a>
+                        </ul>
+                    </div>
+                    <div class="info-1">
+                        <ul class="lista-empresa">
+                            <p class="empresa">Enlaces útiles</p>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">Asistencia</span>
+                            </a>
+                            <a class="detalle-empresa" href="">
+                                <span class="sp">App gratis para movil</span>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer-redes">
+                    <div class="instagram">
+                        <a class="insta" href="">
+                            <img src="/assets/insta.png" alt="">
+                        </a>
+                    </div>
+                    <div class="instagram">
+                        <a class="insta" href="">
+                            <img src="/assets/twi.png" alt="">
+                        </a>
+                    </div>
+                    <div class="facebook">
+                        <a class="insta" href="">
+                            <img src="/assets/face.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <hr class="hrr">
+            <div class="footer-sur">
+                <div class="oeste">
+                    <div class="oeste1">
+                        <div class="oeste1-elemento">
+                            <a class="oeste-a" href="">
+                                <span class="oeste-txt">Legal</span>
+                            </a>
+                        </div>
+                        <div class="oeste1-elemento">
+                            <a class="oeste-a" href="">
+                                <span class="oeste-txt">Centro de Privacidad</span>
+                            </a>
+                        </div>
+                        <div class="oeste1-elemento">
+                            <a class="oeste-a" href="">
+                                <span class="oeste-txt">Política de Privacidad</span>
+                            </a>
+                        </div>
+                        <div class="oeste1-elemento">
+                            <a class="oeste-a" href="">
+                                <span class="oeste-txt">Cookies</span>
+                            </a>
+                        </div>
+                        <div class="oeste1-elemento">
+                            <a class="oeste-a" href="">
+                                <span class="oeste-txt">Información sobre los anuncios</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="este">
+                    <div class="este1">
+                        <p class="este-txt">© 2023 Spotify AB</p>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
 </body>
 
 </html>
