correcciones de links /

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                     <div class="tarjeta-horizontal">
                         <div class="contenedor-tarjeta">
                             <div class="img-horizontal">
-                                <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
+                                <img class="img-propiedades" src="assets/mosaico-1.jpeg" alt="">
                             </div>
                             <div class="info">
                                 <div class="cont-titulo">
@@ -46,7 +46,7 @@
                     <div class="tarjeta-horizontal">
                         <div class="contenedor-tarjeta">
                             <div class="img-horizontal">
-                                <img class="img-propiedades" src="/assets/Daily Mix 2.png" alt="">
+                                <img class="img-propiedades" src="assets/Daily Mix 2.png" alt="">
                             </div>
                             <div class="info">
                                 <div class="cont-titulo">
@@ -67,7 +67,7 @@
                     <div class="tarjeta-horizontal">
                         <div class="contenedor-tarjeta">
                             <div class="img-horizontal">
-                                <img class="img-propiedades" src="/assets/like.png" alt="">
+                                <img class="img-propiedades" src="assets/like.png" alt="">
                             </div>
                             <div class="info">
                                 <div class="cont-titulo">
@@ -88,7 +88,7 @@
                     <div class="tarjeta-horizontal">
                         <div class="contenedor-tarjeta">
                             <div class="img-horizontal">
-                                <img class="img-propiedades" src="/assets/Daily Mix 1.png" alt="">
+                                <img class="img-propiedades" src="assets/Daily Mix 1.png" alt="">
                             </div>
                             <div class="info">
                                 <div class="cont-titulo">
@@ -109,7 +109,7 @@
                     <div class="tarjeta-horizontal">
                         <div class="contenedor-tarjeta">
                             <div class="img-horizontal">
-                                <img class="img-propiedades" src="/assets/Daily Mix 3.png" alt="">
+                                <img class="img-propiedades" src="assets/Daily Mix 3.png" alt="">
                             </div>
                             <div class="info">
                                 <div class="cont-titulo">
@@ -130,7 +130,7 @@
                     <div class="tarjeta-horizontal">
                         <div class="contenedor-tarjeta">
                             <div class="img-horizontal">
-                                <img class="img-propiedades" src="/assets/Daily Mix 4.png" alt="">
+                                <img class="img-propiedades" src="assets/Daily Mix 4.png" alt="">
                             </div>
                             <div class="info">
                                 <div class="cont-titulo">
@@ -166,7 +166,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/enfoque/1.png" alt="">
+                                    <img class="imga" src="assets/enfoque/1.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -185,7 +185,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/enfoque/2.png" alt="">
+                                    <img class="imga" src="assets/enfoque/2.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -204,7 +204,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/enfoque/3.png" alt="">
+                                    <img class="imga" src="assets/enfoque/3.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -223,7 +223,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/enfoque/4.png" alt="">
+                                    <img class="imga" src="assets/enfoque/4.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -242,7 +242,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/enfoque/5.png" alt="">
+                                    <img class="imga" src="assets/enfoque/5.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -261,7 +261,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/enfoque/6.png" alt="">
+                                    <img class="imga" src="assets/enfoque/6.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -294,7 +294,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/playlist/l1.png" alt="">
+                                    <img class="imga" src="assets/playlist/l1.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -313,7 +313,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/playlist/l2.png" alt="">
+                                    <img class="imga" src="assets/playlist/l2.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -332,7 +332,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/playlist/l3.png" alt="">
+                                    <img class="imga" src="assets/playlist/l3.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -351,7 +351,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/playlist/l4.png" alt="">
+                                    <img class="imga" src="assets/playlist/l4.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -370,7 +370,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/playlist/l5.png" alt="">
+                                    <img class="imga" src="assets/playlist/l5.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -389,7 +389,7 @@
                         <div class="contenido">
                             <div class="imagen-enfoque">
                                 <div class="img-enf">
-                                    <img class="imga" src="/assets/playlist/l6.png" alt="">
+                                    <img class="imga" src="assets/playlist/l6.png" alt="">
                                 </div>
                             </div>
                             <div class="descripcion-enfoque">
@@ -463,17 +463,17 @@
                 <div class="footer-redes">
                     <div class="instagram">
                         <a class="insta" href="">
-                            <img src="/assets/insta.png" alt="">
+                            <img src="assets/insta.png" alt="">
                         </a>
                     </div>
                     <div class="instagram">
                         <a class="insta" href="">
-                            <img src="/assets/twi.png" alt="">
+                            <img src="assets/twi.png" alt="">
                         </a>
                     </div>
                     <div class="facebook">
                         <a class="insta" href="">
-                            <img src="/assets/face.png" alt="">
+                            <img src="assets/face.png" alt="">
                         </a>
                     </div>
                 </div>
