--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="contenedor-menu">
                     <div class="logotipo">
                         <div class="contenedor-logo">
-                            <a href="index.html"><img class="logo" src="/assets/logo.png" alt=""></a>
+                            <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
                         </div>
                     </div>
                     <ul>
@@ -209,7 +209,7 @@
             </div>
             <!--Area Principal -->
             <div class="principal" id="principal">
-                <iframe src="/home.html" height="100%" frameborder="0"></iframe>
+                <iframe src="home.html" height="100%" frameborder="0"></iframe>
             </div>
         </div>
     </div>
